Develop basic frontpage

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -271,7 +271,7 @@ th {
   text-align: left; }
 
 html {
-  background-color: white;
+  background-color: #f7ff73;
   font-size: 16px;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -319,14 +319,14 @@ a {
     color: #363636; }
 
 code {
-  background-color: whitesmoke;
+  background-color: #f7ff73;
   color: #ff3860;
   font-size: 0.875em;
   font-weight: normal;
   padding: 0.25em 0.5em 0.25em; }
 
 hr {
-  background-color: whitesmoke;
+  background-color: #f7ff73;
   border: none;
   display: block;
   height: 2px;
@@ -356,7 +356,7 @@ fieldset {
 
 pre {
   -webkit-overflow-scrolling: touch;
-  background-color: whitesmoke;
+  background-color: #f7ff73;
   color: #4a4a4a;
   font-size: 0.875em;
   overflow-x: auto;
@@ -1200,10 +1200,10 @@ a.box:active {
     color: #4a4a4a;
     text-decoration: underline; }
     .button.is-text:hover, .button.is-text.is-hovered, .button.is-text:focus, .button.is-text.is-focused {
-      background-color: whitesmoke;
+      background-color: #f7ff73;
       color: #363636; }
     .button.is-text:active, .button.is-text.is-active {
-      background-color: #e8e8e8;
+      background-color: #f6ff5a;
       color: #363636; }
     .button.is-text[disabled],
     fieldset[disabled] .button.is-text {
@@ -2011,7 +2011,7 @@ a.box:active {
   margin-bottom: 1em; }
 
 .content blockquote {
-  background-color: whitesmoke;
+  background-color: #f7ff73;
   border-left: 5px solid #dbdbdb;
   padding: 1.25em 1.5em; }
 
@@ -2135,8 +2135,8 @@ a.box:active {
   .textarea[disabled],
   fieldset[disabled]
   .textarea {
-    background-color: whitesmoke;
-    border-color: whitesmoke;
+    background-color: #f7ff73;
+    border-color: #f7ff73;
     box-shadow: none;
     color: #7a7a7a; }
     .input[disabled]::-moz-placeholder,
@@ -2362,8 +2362,8 @@ a.box:active {
       box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25); }
     .select select[disabled],
     fieldset[disabled] .select select {
-      background-color: whitesmoke;
-      border-color: whitesmoke;
+      background-color: #f7ff73;
+      border-color: #f7ff73;
       box-shadow: none;
       color: #7a7a7a; }
       .select select[disabled]::-moz-placeholder,
@@ -2382,7 +2382,7 @@ a.box:active {
       display: none; }
     .select select[disabled]:hover,
     fieldset[disabled] .select select:hover {
-      border-color: whitesmoke; }
+      border-color: #f7ff73; }
     .select select:not([multiple]) {
       padding-right: 2.5em; }
     .select select[multiple] {
@@ -3099,9 +3099,12 @@ a.box:active {
   .image.is-128x128 {
     height: 128px;
     width: 128px; }
+  .image.is-400x400 {
+    height: 400px;
+    width: 400px; }
 
 .notification {
-  background-color: whitesmoke;
+  background-color: #f7ff73;
   border-radius: 4px;
   padding: 1.25rem 2.5rem 1.25rem 1.5rem;
   position: relative; }
@@ -3456,7 +3459,7 @@ a.box:active {
 
 .tag:not(body) {
   align-items: center;
-  background-color: whitesmoke;
+  background-color: #f7ff73;
   border-radius: 4px;
   color: #4a4a4a;
   display: inline-flex;
@@ -3536,9 +3539,9 @@ a.box:active {
       height: 50%;
       width: 1px; }
     .tag:not(body).is-delete:hover, .tag:not(body).is-delete:focus {
-      background-color: #e8e8e8; }
+      background-color: #f6ff5a; }
     .tag:not(body).is-delete:active {
-      background-color: #dbdbdb; }
+      background-color: #f4ff40; }
   .tag:not(body).is-rounded {
     border-radius: 290486px; }
 
@@ -3633,7 +3636,7 @@ a.tag:hover {
 
 .number {
   align-items: center;
-  background-color: whitesmoke;
+  background-color: #f7ff73;
   border-radius: 290486px;
   display: inline-flex;
   font-size: 1.25rem;
@@ -3804,7 +3807,7 @@ button.dropdown-item {
   width: 100%; }
   a.dropdown-item:hover,
   button.dropdown-item:hover {
-    background-color: whitesmoke;
+    background-color: #f7ff73;
     color: #0a0a0a; }
   a.dropdown-item.is-active,
   button.dropdown-item.is-active {
@@ -3911,7 +3914,7 @@ button.dropdown-item {
     color: #fff; }
 
 a.list-item {
-  background-color: whitesmoke;
+  background-color: #f7ff73;
   cursor: pointer; }
 
 .media {
@@ -3978,7 +3981,7 @@ a.list-item {
     display: block;
     padding: 0.5em 0.75em; }
     .menu-list a:hover {
-      background-color: whitesmoke;
+      background-color: #f7ff73;
       color: #363636; }
     .menu-list a.is-active {
       background-color: #3273dc;
@@ -3999,7 +4002,7 @@ a.list-item {
     margin-bottom: 1em; }
 
 .message {
-  background-color: whitesmoke;
+  background-color: #f7ff73;
   border-radius: 4px;
   font-size: 1rem; }
   .message strong {
@@ -4173,7 +4176,7 @@ a.list-item {
 .modal-card-head,
 .modal-card-foot {
   align-items: center;
-  background-color: whitesmoke;
+  background-color: #f7ff73;
   display: flex;
   flex-shrink: 0;
   justify-content: flex-start;
@@ -4618,7 +4621,7 @@ a.list-item {
     min-height: 3.25rem;
     width: 100%; }
   .navbar.has-shadow {
-    box-shadow: 0 2px 0 0 whitesmoke; }
+    box-shadow: 0 2px 0 0 #f7ff73; }
   .navbar.is-fixed-bottom, .navbar.is-fixed-top {
     left: 0;
     position: fixed;
@@ -4627,7 +4630,7 @@ a.list-item {
   .navbar.is-fixed-bottom {
     bottom: 0; }
     .navbar.is-fixed-bottom.has-shadow {
-      box-shadow: 0 -2px 0 0 whitesmoke; }
+      box-shadow: 0 -2px 0 0 #f7ff73; }
   .navbar.is-fixed-top {
     top: 0; }
 
@@ -4759,7 +4762,7 @@ a.navbar-item,
     padding-right: 1.5rem; }
 
 .navbar-divider {
-  background-color: whitesmoke;
+  background-color: #f7ff73;
   border: none;
   display: none;
   height: 2px;
@@ -4826,10 +4829,10 @@ a.navbar-item,
     .navbar.is-transparent .navbar-item.has-dropdown.is-active .navbar-link, .navbar.is-transparent .navbar-item.has-dropdown.is-hoverable:hover .navbar-link {
       background-color: transparent !important; }
     .navbar.is-transparent .navbar-dropdown a.navbar-item:hover {
-      background-color: whitesmoke;
+      background-color: #f7ff73;
       color: #0a0a0a; }
     .navbar.is-transparent .navbar-dropdown a.navbar-item.is-active {
-      background-color: whitesmoke;
+      background-color: #f7ff73;
       color: #3273dc; }
   .navbar-burger {
     display: none; }
@@ -4884,10 +4887,10 @@ a.navbar-item,
     .navbar-dropdown a.navbar-item {
       padding-right: 3rem; }
       .navbar-dropdown a.navbar-item:hover {
-        background-color: whitesmoke;
+        background-color: #f7ff73;
         color: #0a0a0a; }
       .navbar-dropdown a.navbar-item.is-active {
-        background-color: whitesmoke;
+        background-color: #f7ff73;
         color: #3273dc; }
     .navbar.is-spaced .navbar-dropdown, .navbar-dropdown.is-boxed {
       border-radius: 6px;
@@ -5082,7 +5085,7 @@ a.navbar-item,
     border-top: 1px solid #dbdbdb; }
 
 .panel-heading {
-  background-color: whitesmoke;
+  background-color: #f7ff73;
   border-radius: 4px 4px 0 0;
   color: #363636;
   font-size: 1.25em;
@@ -5133,7 +5136,7 @@ label.panel-block {
   cursor: pointer; }
   a.panel-block:hover,
   label.panel-block:hover {
-    background-color: whitesmoke; }
+    background-color: #f7ff73; }
 
 .panel-icon {
   display: inline-block;
@@ -5208,7 +5211,7 @@ label.panel-block {
     border: 1px solid transparent;
     border-radius: 4px 4px 0 0; }
     .tabs.is-boxed a:hover {
-      background-color: whitesmoke;
+      background-color: #f7ff73;
       border-bottom-color: #dbdbdb; }
   .tabs.is-boxed li.is-active a {
     background-color: white;
@@ -5224,7 +5227,7 @@ label.panel-block {
     margin-bottom: 0;
     position: relative; }
     .tabs.is-toggle a:hover {
-      background-color: whitesmoke;
+      background-color: #f7ff73;
       border-color: #b5b5b5;
       z-index: 2; }
   .tabs.is-toggle li + li {
