--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -1,2 +1,7 @@
 @charset "utf-8";
+
+$dimensions: 16 24 32 48 64 96 128 400;
+$background: #f7ff73;
+$body-background-color: $background;
+
 @import "../node_modules/bulma/bulma.sass";
