--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -2,6 +2,6 @@
 
 $dimensions: 16 24 32 48 64 96 128 400;
 $background: #f7ff73;
-$body-background-color: $background;
+$grey: $background; 
 
 @import "../node_modules/bulma/bulma.sass";
