--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -319,14 +319,14 @@ a {
     color: #363636; }
 
 code {
-  background-color: #f7ff73;
+  background-color: whitesmoke;
   color: #ff3860;
   font-size: 0.875em;
   font-weight: normal;
   padding: 0.25em 0.5em 0.25em; }
 
 hr {
-  background-color: #f7ff73;
+  background-color: whitesmoke;
   border: none;
   display: block;
   height: 2px;
@@ -356,7 +356,7 @@ fieldset {
 
 pre {
   -webkit-overflow-scrolling: touch;
-  background-color: #f7ff73;
+  background-color: whitesmoke;
   color: #4a4a4a;
   font-size: 0.875em;
   overflow-x: auto;
@@ -791,10 +791,10 @@ a.has-text-danger:hover, a.has-text-danger:focus {
   background-color: #4a4a4a !important; }
 
 .has-text-grey {
-  color: #f7ff73 !important; }
+  color: #7a7a7a !important; }
 
 .has-background-grey {
-  background-color: #f7ff73 !important; }
+  background-color: #7a7a7a !important; }
 
 .has-text-grey-light {
   color: #b5b5b5 !important; }
@@ -1200,10 +1200,10 @@ a.box:active {
     color: #4a4a4a;
     text-decoration: underline; }
     .button.is-text:hover, .button.is-text.is-hovered, .button.is-text:focus, .button.is-text.is-focused {
-      background-color: #f7ff73;
+      background-color: whitesmoke;
       color: #363636; }
     .button.is-text:active, .button.is-text.is-active {
-      background-color: #f6ff5a;
+      background-color: #e8e8e8;
       color: #363636; }
     .button.is-text[disabled],
     fieldset[disabled] .button.is-text {
@@ -1879,7 +1879,7 @@ a.box:active {
   .button.is-static {
     background-color: whitesmoke;
     border-color: #dbdbdb;
-    color: #f7ff73;
+    color: #7a7a7a;
     box-shadow: none;
     pointer-events: none; }
   .button.is-rounded {
@@ -2011,7 +2011,7 @@ a.box:active {
   margin-bottom: 1em; }
 
 .content blockquote {
-  background-color: #f7ff73;
+  background-color: whitesmoke;
   border-left: 5px solid #dbdbdb;
   padding: 1.25em 1.5em; }
 
@@ -2135,34 +2135,34 @@ a.box:active {
   .textarea[disabled],
   fieldset[disabled]
   .textarea {
-    background-color: #f7ff73;
-    border-color: #f7ff73;
+    background-color: whitesmoke;
+    border-color: whitesmoke;
     box-shadow: none;
-    color: #f7ff73; }
+    color: #7a7a7a; }
     .input[disabled]::-moz-placeholder,
     fieldset[disabled] .input::-moz-placeholder,
     .textarea[disabled]::-moz-placeholder,
     fieldset[disabled]
     .textarea::-moz-placeholder {
-      color: rgba(247, 255, 115, 0.3); }
+      color: rgba(122, 122, 122, 0.3); }
     .input[disabled]::-webkit-input-placeholder,
     fieldset[disabled] .input::-webkit-input-placeholder,
     .textarea[disabled]::-webkit-input-placeholder,
     fieldset[disabled]
     .textarea::-webkit-input-placeholder {
-      color: rgba(247, 255, 115, 0.3); }
+      color: rgba(122, 122, 122, 0.3); }
     .input[disabled]:-moz-placeholder,
     fieldset[disabled] .input:-moz-placeholder,
     .textarea[disabled]:-moz-placeholder,
     fieldset[disabled]
     .textarea:-moz-placeholder {
-      color: rgba(247, 255, 115, 0.3); }
+      color: rgba(122, 122, 122, 0.3); }
     .input[disabled]:-ms-input-placeholder,
     fieldset[disabled] .input:-ms-input-placeholder,
     .textarea[disabled]:-ms-input-placeholder,
     fieldset[disabled]
     .textarea:-ms-input-placeholder {
-      color: rgba(247, 255, 115, 0.3); }
+      color: rgba(122, 122, 122, 0.3); }
   .input[readonly],
   .textarea[readonly] {
     box-shadow: none; }
@@ -2318,7 +2318,7 @@ a.box:active {
   .radio[disabled],
   fieldset[disabled]
   .radio {
-    color: #f7ff73;
+    color: #7a7a7a;
     cursor: not-allowed; }
 
 .radio + .radio {
@@ -2362,27 +2362,27 @@ a.box:active {
       box-shadow: 0 0 0 0.125em rgba(50, 115, 220, 0.25); }
     .select select[disabled],
     fieldset[disabled] .select select {
-      background-color: #f7ff73;
-      border-color: #f7ff73;
+      background-color: whitesmoke;
+      border-color: whitesmoke;
       box-shadow: none;
-      color: #f7ff73; }
+      color: #7a7a7a; }
       .select select[disabled]::-moz-placeholder,
       fieldset[disabled] .select select::-moz-placeholder {
-        color: rgba(247, 255, 115, 0.3); }
+        color: rgba(122, 122, 122, 0.3); }
       .select select[disabled]::-webkit-input-placeholder,
       fieldset[disabled] .select select::-webkit-input-placeholder {
-        color: rgba(247, 255, 115, 0.3); }
+        color: rgba(122, 122, 122, 0.3); }
       .select select[disabled]:-moz-placeholder,
       fieldset[disabled] .select select:-moz-placeholder {
-        color: rgba(247, 255, 115, 0.3); }
+        color: rgba(122, 122, 122, 0.3); }
       .select select[disabled]:-ms-input-placeholder,
       fieldset[disabled] .select select:-ms-input-placeholder {
-        color: rgba(247, 255, 115, 0.3); }
+        color: rgba(122, 122, 122, 0.3); }
     .select select::-ms-expand {
       display: none; }
     .select select[disabled]:hover,
     fieldset[disabled] .select select:hover {
-      border-color: #f7ff73; }
+      border-color: whitesmoke; }
     .select select:not([multiple]) {
       padding-right: 2.5em; }
     .select select[multiple] {
@@ -2480,7 +2480,7 @@ a.box:active {
   .select.is-large {
     font-size: 1.5rem; }
   .select.is-disabled::after {
-    border-color: #f7ff73; }
+    border-color: #7a7a7a; }
   .select.is-fullwidth {
     width: 100%; }
     .select.is-fullwidth select {
@@ -2961,7 +2961,7 @@ a.box:active {
   .control.has-icons-left .input:focus ~ .icon,
   .control.has-icons-left .select:focus ~ .icon, .control.has-icons-right .input:focus ~ .icon,
   .control.has-icons-right .select:focus ~ .icon {
-    color: #f7ff73; }
+    color: #7a7a7a; }
   .control.has-icons-left .input.is-small ~ .icon,
   .control.has-icons-left .select.is-small ~ .icon, .control.has-icons-right .input.is-small ~ .icon,
   .control.has-icons-right .select.is-small ~ .icon {
@@ -3099,12 +3099,15 @@ a.box:active {
   .image.is-128x128 {
     height: 128px;
     width: 128px; }
+  .image.is-256x256 {
+    height: 256px;
+    width: 256px; }
   .image.is-400x400 {
     height: 400px;
     width: 400px; }
 
 .notification {
-  background-color: #f7ff73;
+  background-color: whitesmoke;
   border-radius: 4px;
   padding: 1.25rem 2.5rem 1.25rem 1.5rem;
   position: relative; }
@@ -3459,7 +3462,7 @@ a.box:active {
 
 .tag:not(body) {
   align-items: center;
-  background-color: #f7ff73;
+  background-color: whitesmoke;
   border-radius: 4px;
   color: #4a4a4a;
   display: inline-flex;
@@ -3539,9 +3542,9 @@ a.box:active {
       height: 50%;
       width: 1px; }
     .tag:not(body).is-delete:hover, .tag:not(body).is-delete:focus {
-      background-color: #f6ff5a; }
+      background-color: #e8e8e8; }
     .tag:not(body).is-delete:active {
-      background-color: #f4ff40; }
+      background-color: #dbdbdb; }
   .tag:not(body).is-rounded {
     border-radius: 290486px; }
 
@@ -3636,7 +3639,7 @@ a.tag:hover {
 
 .number {
   align-items: center;
-  background-color: #f7ff73;
+  background-color: whitesmoke;
   border-radius: 290486px;
   display: inline-flex;
   font-size: 1.25rem;
@@ -3807,7 +3810,7 @@ button.dropdown-item {
   width: 100%; }
   a.dropdown-item:hover,
   button.dropdown-item:hover {
-    background-color: #f7ff73;
+    background-color: whitesmoke;
     color: #0a0a0a; }
   a.dropdown-item.is-active,
   button.dropdown-item.is-active {
@@ -3914,7 +3917,7 @@ button.dropdown-item {
     color: #fff; }
 
 a.list-item {
-  background-color: #f7ff73;
+  background-color: whitesmoke;
   cursor: pointer; }
 
 .media {
@@ -3981,7 +3984,7 @@ a.list-item {
     display: block;
     padding: 0.5em 0.75em; }
     .menu-list a:hover {
-      background-color: #f7ff73;
+      background-color: whitesmoke;
       color: #363636; }
     .menu-list a.is-active {
       background-color: #3273dc;
@@ -3992,7 +3995,7 @@ a.list-item {
     padding-left: 0.75em; }
 
 .menu-label {
-  color: #f7ff73;
+  color: #7a7a7a;
   font-size: 0.75em;
   letter-spacing: 0.1em;
   text-transform: uppercase; }
@@ -4002,7 +4005,7 @@ a.list-item {
     margin-bottom: 1em; }
 
 .message {
-  background-color: #f7ff73;
+  background-color: whitesmoke;
   border-radius: 4px;
   font-size: 1rem; }
   .message strong {
@@ -4176,7 +4179,7 @@ a.list-item {
 .modal-card-head,
 .modal-card-foot {
   align-items: center;
-  background-color: #f7ff73;
+  background-color: whitesmoke;
   display: flex;
   flex-shrink: 0;
   justify-content: flex-start;
@@ -4621,7 +4624,7 @@ a.list-item {
     min-height: 3.25rem;
     width: 100%; }
   .navbar.has-shadow {
-    box-shadow: 0 2px 0 0 #f7ff73; }
+    box-shadow: 0 2px 0 0 whitesmoke; }
   .navbar.is-fixed-bottom, .navbar.is-fixed-top {
     left: 0;
     position: fixed;
@@ -4630,7 +4633,7 @@ a.list-item {
   .navbar.is-fixed-bottom {
     bottom: 0; }
     .navbar.is-fixed-bottom.has-shadow {
-      box-shadow: 0 -2px 0 0 #f7ff73; }
+      box-shadow: 0 -2px 0 0 whitesmoke; }
   .navbar.is-fixed-top {
     top: 0; }
 
@@ -4762,7 +4765,7 @@ a.navbar-item,
     padding-right: 1.5rem; }
 
 .navbar-divider {
-  background-color: #f7ff73;
+  background-color: whitesmoke;
   border: none;
   display: none;
   height: 2px;
@@ -4829,10 +4832,10 @@ a.navbar-item,
     .navbar.is-transparent .navbar-item.has-dropdown.is-active .navbar-link, .navbar.is-transparent .navbar-item.has-dropdown.is-hoverable:hover .navbar-link {
       background-color: transparent !important; }
     .navbar.is-transparent .navbar-dropdown a.navbar-item:hover {
-      background-color: #f7ff73;
+      background-color: whitesmoke;
       color: #0a0a0a; }
     .navbar.is-transparent .navbar-dropdown a.navbar-item.is-active {
-      background-color: #f7ff73;
+      background-color: whitesmoke;
       color: #3273dc; }
   .navbar-burger {
     display: none; }
@@ -4887,10 +4890,10 @@ a.navbar-item,
     .navbar-dropdown a.navbar-item {
       padding-right: 3rem; }
       .navbar-dropdown a.navbar-item:hover {
-        background-color: #f7ff73;
+        background-color: whitesmoke;
         color: #0a0a0a; }
       .navbar-dropdown a.navbar-item.is-active {
-        background-color: #f7ff73;
+        background-color: whitesmoke;
         color: #3273dc; }
     .navbar.is-spaced .navbar-dropdown, .navbar-dropdown.is-boxed {
       border-radius: 6px;
@@ -5009,7 +5012,7 @@ a.navbar-item,
     background-color: #dbdbdb;
     border-color: #dbdbdb;
     box-shadow: none;
-    color: #f7ff73;
+    color: #7a7a7a;
     opacity: 0.5; }
 
 .pagination-previous,
@@ -5085,7 +5088,7 @@ a.navbar-item,
     border-top: 1px solid #dbdbdb; }
 
 .panel-heading {
-  background-color: #f7ff73;
+  background-color: whitesmoke;
   border-radius: 4px 4px 0 0;
   color: #363636;
   font-size: 1.25em;
@@ -5136,7 +5139,7 @@ label.panel-block {
   cursor: pointer; }
   a.panel-block:hover,
   label.panel-block:hover {
-    background-color: #f7ff73; }
+    background-color: whitesmoke; }
 
 .panel-icon {
   display: inline-block;
@@ -5146,7 +5149,7 @@ label.panel-block {
   text-align: center;
   vertical-align: top;
   width: 1em;
-  color: #f7ff73;
+  color: #7a7a7a;
   margin-right: 0.75em; }
   .panel-icon .fa {
     font-size: inherit;
@@ -5211,7 +5214,7 @@ label.panel-block {
     border: 1px solid transparent;
     border-radius: 4px 4px 0 0; }
     .tabs.is-boxed a:hover {
-      background-color: #f7ff73;
+      background-color: whitesmoke;
       border-bottom-color: #dbdbdb; }
   .tabs.is-boxed li.is-active a {
     background-color: white;
@@ -5227,7 +5230,7 @@ label.panel-block {
     margin-bottom: 0;
     position: relative; }
     .tabs.is-toggle a:hover {
-      background-color: #f7ff73;
+      background-color: whitesmoke;
       border-color: #b5b5b5;
       z-index: 2; }
   .tabs.is-toggle li + li {
@@ -6928,3 +6931,10 @@ label.panel-block {
 .footer {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem; }
+
+.navbar {
+  padding-top: 30px; }
+
+#myimg {
+  margin-top: 100px;
+  margin-left: 50px; }
