--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -1,7 +1,17 @@
 @charset "utf-8";
 
-$dimensions: 16 24 32 48 64 96 128 400;
-$background: #f7ff73;
-$grey: $background; 
+$dimensions: 16 24 32 48 64 96 128 256 400;
+// $background: #f7ff73;
+// $grey: $background; 
+// $navbar-background-color: #f7ff73;
 
 @import "../node_modules/bulma/bulma.sass";
+
+.navbar{
+    padding-top: 30px;
+}
+
+#myimg{
+    margin-top: 100px;
+    margin-left: 50px;
+}
