--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -15,3 +15,12 @@ $dimensions: 16 24 32 48 64 96 128 256 400;
     margin-top: 100px;
     margin-left: 50px;
 }
+
+.delay0{
+    animation-delay: 0.2s;
+
+}
+
+.delay1{
+    animation-delay: 5s;
+}
